<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dumbo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_monitor_me">Monitor</string>
    <string name="action_clear">Clear</string>
    <string name="action_pred_view">View</string>
    <string name="action_heatmap">Heatmap</string>
    <string name="action_particles">Particles</string>
    <string name="action_connected_particles">Connected Particles</string>
    <string name="action_hotspots">Hotspots</string>

</resources>
