<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_clear"
        android:icon="@drawable/clear_screen"
        android:title="@string/action_clear"
        android:showAsAction="always" />

    <item android:id="@+id/action_pred_view"
        android:icon="@drawable/view"
        android:title="@string/action_pred_view"
        android:showAsAction="always">

        <menu>
            <item android:id="@+id/action_heatmap"
                android:icon="@drawable/heatmap"
                android:title="@string/action_heatmap"
                android:showAsAction="always"/>
            <item android:id="@+id/action_particles"
                android:icon="@drawable/particles"
                android:title="@string/action_particles"
                android:showAsAction="always"/>
            <item android:id="@+id/action_connected_particles"
                android:icon="@drawable/connectedparticles"
                android:title="@string/action_connected_particles"
                android:showAsAction="always"/>


        </menu>

    </item>

    <item android:id="@+id/action_hotspots"
        android:icon="@drawable/hotspots"
        android:title="@string/action_hotspots"
        android:showAsAction="always" />





    <item android:id="@+id/action_monitor_me"
        android:icon="@drawable/monitor_me"
        android:title="@string/action_monitor_me"
        android:showAsAction="always" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />


</menu>
